--- a/public/brick-breaker/brickBreaker.html
+++ b/public/brick-breaker/brickBreaker.html
@@ -21,8 +21,8 @@
        </div>
    </div>
     <noscript>Please Enable Javascript in your browser</noscript>
-    <script src="index.js"></script>
-    <script>
+    <script defer src="index.js"></script>
+    <script defer>
         let screenFlag = 0;
         function toggleFullscreen(){
             if(screenFlag == 0){
@@ -43,5 +43,14 @@
             }
         }
     </script>
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script defer src="/__/firebase/8.2.0/firebase-app.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+        https://firebase.google.com/docs/web/setup#available-libraries -->
+    <script defer src="/__/firebase/8.2.0/firebase-analytics.js"></script>
+
+    <!-- Initialize Firebase -->
+    <script defer src="/__/firebase/init.js"></script>
 </body>
 </html>
